# trust-and-safety-demo

./: .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  book.toml  demo.sh  docker-compose.yaml  entrypoint.sh  init-bigtable.sh  pyproject.toml  start.sh
dashboard/: .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.dashboard.yml
dashboard/backend/: .dockerignore  Dockerfile  __init__.py  config.py  main.py  pyproject.toml  requirements.txt
dashboard/backend/app/: config.py  db.py  main.py
dashboard/backend/app/models/: schemas.py
dashboard/backend/app/routers/: events.py  labels.py  pipeline.py  rules.py  summary.py  verdicts.py
dashboard/backend/app/services/: execution_result_service.py  labels_service.py  metrics_service.py
dashboard/backend/migrations/: 001_create_dashboard_metrics.sql
dashboard/backend/models/: __init__.py  schemas.py
dashboard/backend/routers/: __init__.py  _common.py  events.py  labels.py  overview.py  pipeline.py  rules.py
dashboard/backend/services/: __init__.py  druid_client.py  labels_db.py  metrics_agg.py  results_store.py
dashboard/backend/tests/: test_common.py  test_metrics_agg.py
docs/: DEVELOPMENT.md  README.md  SUMMARY.md  UI.md  dashboards.md  rules.md  user_personas.md
example_data/: bulk_generate.py  export_druid_results.py  generate_coordinator_test_data.sh  sample_actions.json  sample_execution_results.json
example_plugins/: README.md  pyproject.toml
example_rules/: README.md
osprey_rpc/: pyproject.toml
osprey_ui/: README.md  package-lock.json  package.json
(+174 files in other folders)
