[project]
name = "osprey-dashboard-backend"
version = "0.1.0"
description = "Executive analytics dashboard backend for the Osprey trust-and-safety pipeline."
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "pydantic==2.9.2",
    "pydantic-settings==2.6.1",
    "httpx==0.27.2",
    "sqlalchemy==2.0.36",
    "psycopg2-binary==2.9.10",
    "minio==7.2.16",
    "python-dateutil==2.9.0.post0",
    "orjson==3.10.11",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "ruff==0.7.4",
    "mypy==1.13.0",
    "types-python-dateutil==2.9.0.20241003",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "config"]

[tool.setuptools.packages.find]
include = ["routers*", "services*", "models*"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "I", "B006"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
disallow_any_generics = true
ignore_missing_imports = true
